--- a/templates/home.html
+++ b/templates/home.html
@@ -1019,18 +1019,24 @@
 
                 <div class="lg:col-span-3">
                     <div :key="selectedIndustry" class="glass-effect rounded-2xl border border-white/10 overflow-hidden h-full flex flex-col">
-                        <div class="relative h-64 w-full" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100">
-                             <img :src="industries[selectedIndustry].images[0]" 
-                                 :alt="industries[selectedIndustry].title" 
-                                 class="absolute h-full w-full object-cover">
-                             <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+                        <div class="relative h-64 w-full">
+                            <template x-for="(image, index) in industries[selectedIndustry].images" :key="index">
+                                <div x-show="currentImageIndex === index"
+                                     x-transition:enter="transition-opacity ease-in-out duration-1000"
+                                     x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                                     x-transition:leave="transition-opacity ease-in-out duration-1000"
+                                     x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0"
+                                     class="absolute inset-0">
+                                    <img :src="image" :alt="industries[selectedIndustry].title" class="absolute h-full w-full object-cover">
+                                </div>
+                            </template>
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
                         </div>
 
                         <div class="p-6 sm:p-8 flex flex-col flex-grow">
-                            <div x-transition:enter="transition ease-out duration-500 delay-100" x-transition:enter-start="opacity-0 translate-y-3" x-transition:enter-end="opacity-100 translate-y-0">
+                             <div x-transition:enter="transition ease-out duration-500 delay-100" x-transition:enter-start="opacity-0 translate-y-3" x-transition:enter-end="opacity-100 translate-y-0">
                                 <h3 class="text-2xl font-bold text-white uppercase" x-text="industries[selectedIndustry].title"></h3>
                                 <p class="mt-3 text-gray-300 text-sm" x-text="industries[selectedIndustry].description"></p>
-                                
                                 <div class="mt-6 border-t border-white/10 pt-5">
                                     <h4 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
                                     <ul class="mt-3 space-y-2">
@@ -1056,10 +1062,13 @@
             <div class="mt-12 lg:hidden space-y-3 glass-effect rounded-2xl border border-white/10 p-2">
                 <template x-for="(industry, key) in industries" :key="key">
                     <div class="border border-white/10 rounded-xl overflow-hidden">
-                        <button @click="selectedIndustry = (selectedIndustry === key ? null : key)" 
+                        <button @click="const wasOpen = selectedIndustry === key; selectedIndustry = wasOpen ? null : key; if (!wasOpen) { $nextTick(() => { const headerTop = $el.getBoundingClientRect().top + window.scrollY; window.scrollTo({ top: headerTop - 80, behavior: 'smooth' }); }); }"
                                 class="w-full flex justify-between items-center text-left p-4 transition-colors duration-200"
                                 :class="{ 'accordion-header-active': selectedIndustry === key }">
-                            <span class="font-semibold text-white" x-text="industry.title"></span>
+                            <span class="flex items-center font-semibold text-white">
+                                <span class="w-6 h-6 mr-3 text-teal-400" x-html="industry.icon"></span>
+                                <span x-text="industry.title"></span>
+                            </span>
                             <svg class="w-5 h-5 text-gray-400 transform transition-transform duration-300" 
                                  :class="{ 'rotate-180': selectedIndustry === key }"
                                  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
