--- a/templates/home.html
+++ b/templates/home.html
@@ -337,6 +337,7 @@
             // slideshow state
             currentImageIndex: 0,
             slideshowInterval: null,
+            slideshowHasStarted: false,
 
            // Updated Industries Data
             industries: {
@@ -450,9 +451,10 @@
             startSlideshow() {
                 clearInterval(this.slideshowInterval);
                 this.currentImageIndex = 0;
-                if (this.industries[this.selectedIndustry] && this.industries[this.selectedIndustry].images.length > 1) {
+                const industry = this.industries[this.selectedIndustry];
+                if (industry && industry.images && industry.images.length > 1) {
                     this.slideshowInterval = setInterval(() => {
-                        this.currentImageIndex = (this.currentImageIndex + 1) % this.industries[this.selectedIndustry].images.length;
+                        this.currentImageIndex = (this.currentImageIndex + 1) % industry.images.length;
                     }, 4000);
                 }
             },
@@ -474,6 +476,23 @@
                 clearInterval(this.slideshowInterval);
                 document.body.style.overflow = 'auto';
                 setTimeout(() => { this.inquirySubject = ''; }, 300);
+            },
+
+            initSlideshowObserver() {
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting && !this.slideshowHasStarted) {
+                            this.slideshowHasStarted = true;
+                            this.startSlideshow();
+                            observer.unobserve(entry.target); // Stop observing after it's started
+                        }
+                    });
+                }, { threshold: 0.5 }); // Starts when 50% of the section is visible
+
+                const industriesSection = document.getElementById('industries');
+                if (industriesSection) {
+                    observer.observe(industriesSection);
+                }
             },
 
             initScrollSpy() {
@@ -602,7 +621,6 @@
             },
 
             init() {
-                this.activeIndustry = this.industries['health'] || {};
                 this.$watch('selectedIndustry', (newValue) => {
                     if (newValue) {
                         this.startSlideshow();
@@ -610,7 +628,10 @@
                         clearInterval(this.slideshowInterval);
                     }
                 });
-                this.startSlideshow(); // Initial call
+
+                // Do NOT start slideshow here. It will be started by the observer.
+                this.initSlideshowObserver();
+                
                 setTimeout(() => this.initScrollSpy(), 80);
                 this.initFadeInObserver();
             }
