--- a/templates/home.html
+++ b/templates/home.html
@@ -1000,7 +1000,7 @@
 
                 <div class="lg:col-span-3">
                     <div :key="selectedIndustry" class="glass-effect rounded-2xl border border-white/10 overflow-hidden h-full flex flex-col">
-                        <div class="relative h-64 w-full">
+                        <div class="relative h-80 w-full">
                             <template x-for="(image, index) in industries[selectedIndustry].images" :key="index">
                                 <div x-show="currentImageIndex === index"
                                      x-transition:enter="transition-opacity ease-in-out duration-1000"
@@ -1047,17 +1047,26 @@
                                 class="w-full flex justify-between items-center text-left p-4 transition-colors duration-200"
                                 :class="{ 'accordion-header-active': selectedIndustry === key }">
                             <span class="flex items-center font-semibold text-white">
-                                <span class="w-6 h-6 mr-3 text-teal-400" x-html="industry.icon"></span>
+                                <span class="w-6 h-6 mr-3 text-teal-400 flex-shrink-0" x-html="industry.icon"></span>
                                 <span x-text="industry.title"></span>
                             </span>
-                            <svg class="w-5 h-5 text-gray-400 transform transition-transform duration-300" 
+                            <svg class="w-5 h-5 text-gray-400 transform transition-transform duration-300 flex-shrink-0" 
                                  :class="{ 'rotate-180': selectedIndustry === key }"
                                  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                             </svg>
                         </button>
                         <div x-show="selectedIndustry === key" x-collapse.duration.500ms class="accordion-content">
-                            <img :src="industry.images[0]" :alt="industry.title" class="w-full h-48 object-cover">
+                            <div class="relative h-48 w-full">
+                                <template x-for="(image, index) in industry.images" :key="index">
+                                    <div x-show="currentImageIndex === index"
+                                         x-transition:enter="transition-opacity ease-in-out duration-1000"
+                                         x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                                         class="absolute inset-0">
+                                        <img :src="image" :alt="industry.title" class="absolute h-full w-full object-cover">
+                                    </div>
+                                </template>
+                            </div>
                             <div class="p-4">
                                 <p class="text-gray-300 text-sm mb-4" x-text="industry.description"></p>
                                 <div class="border-t border-white/10 pt-4">
