--- a/templates/home.html
+++ b/templates/home.html
@@ -943,7 +943,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-2.25-1.313M21 7.5v2.25m0-2.25l-2.25 1.313M3 7.5l2.25-1.313M3 7.5l2.25 1.313M3 7.5v2.25m9 3l2.25-1.313M12 12.75l-2.25-1.313M12 12.75V15m0 6.75l2.25-1.313M12 21.75l-2.25-1.313M12 21.75v-2.25m9-1.5l-2.25-1.313M21 18l-2.25 1.313M21 18v-2.25m-18 0l2.25-1.313M3 18l2.25 1.313M3 18v-2.25" />
                             </svg>
                         </div>
-                        <img src="{{ url_for('static', filename='images/logos/logo-nanoefx.svg') }}" alt="NanoEfx Logo" class="project-partner-logo">
+                        <img src="{{ url_for('static', filename='images/logos/logo-nanoefx.png') }}" alt="NanoEfx Logo" class="project-partner-logo">
                     </div>
                     <div class="p-6 sm:p-8 flex-grow flex flex-col">
                         <span class="text-sm font-semibold text-teal-400 uppercase">Fuel Efficiency / Oil & Gas</span>
