Update project partner logo styles
Adjusted positioning and size of project partner logo.

--- a/templates/home.html
+++ b/templates/home.html
@@ -339,12 +339,12 @@
         
         .project-partner-logo {
             position: absolute;
-            top: 1rem; /* Repositioned to top */
-            left: 1.5rem; /* Repositioned to left */
+            top: 1.25rem;
+            left: 1.5rem;
             width: auto;
-            height: 1.25rem; /* 20px - slightly smaller */
+            height: 2rem;
             filter: grayscale(1) brightness(2.5);
-            opacity: 0.5; /* Slightly more subtle */
+            opacity: 0.7;
         }
     </style>
 </head>
