--- a/templates/home.html
+++ b/templates/home.html
@@ -346,6 +346,15 @@
             filter: grayscale(1) brightness(2.5);
             opacity: 0.7;
         }
+        .project-partner-logo-orlib {
+            position: absolute;
+            top: 1.25rem;
+            left: 1.5rem;
+            width: auto;
+            height: 3.5rem;
+            filter: grayscale(1) brightness(2.5);
+            opacity: 0.7;
+        }
     </style>
 </head>
 
