--- a/templates/home.html
+++ b/templates/home.html
@@ -999,12 +999,12 @@
                 <div class="glass-effect rounded-2xl border border-white/10 overflow-hidden flex flex-col">
                     <div class="project-card-visual h-48 flex-shrink-0">
                         <div class="project-icon-glow"></div>
-                        <div class="project-focal-icon-orlib">
+                        <div class="project-focal-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                             </svg>
                         </div>
-                        <img src="{{ url_for('static', filename='images/logos/logo-orlib.png') }}" alt="ORLIB Logo" class="project-partner-logo">
+                        <img src="{{ url_for('static', filename='images/logos/logo-orlib.png') }}" alt="ORLIB Logo" class="project-partner-logo-orlib">
                     </div>
                     <div class="p-6 sm:p-8 flex-grow flex flex-col">
                         <span class="text-sm font-semibold text-teal-400 uppercase">Energy Solutions / Manufacturing</span>
