--- a/templates/home.html
+++ b/templates/home.html
@@ -331,12 +331,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 4.5rem;
-            height: 4.5rem;
+            width: 4.5rem; /* 72px - Default size for desktop */
+            height: 4.5rem; /* 72px */
             color: rgba(20, 184, 166, 0.6);
             opacity: 0.8;
+        }
 
-            @media (max-width: 1023px) {
+        @media (max-width: 1023px) {
             .project-focal-icon {
                 width: 3.5rem;
                 height: 3.5rem;
