Update project card visual class for responsiveness

--- a/templates/home.html
+++ b/templates/home.html
@@ -989,7 +989,7 @@
             <div class="mt-12 sm:mt-16 grid lg:grid-cols-2 gap-8 lg:gap-12 items-stretch">
 
                 <div class="glass-effect rounded-2xl border border-white/10 overflow-hidden flex flex-col">
-                    <div class="project-card-visual h-48 flex-shrink-0">
+                    <div class="project-card-visual sm:h-48 flex-shrink-0">
                         <div class="project-icon-glow"></div>
                         <div class="project-focal-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 109.57 122.88" fill="currentColor">
@@ -1022,7 +1022,7 @@
                 </div>
 
                 <div class="glass-effect rounded-2xl border border-white/10 overflow-hidden flex flex-col">
-                    <div class="project-card-visual h-48 flex-shrink-0">
+                    <div class="project-card-visual sm:h-48 flex-shrink-0">
                         <div class="project-icon-glow"></div>
                         <div class="project-focal-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor">
