Add filter and adjust styles for logos

--- a/templates/home.html
+++ b/templates/home.html
@@ -367,17 +367,28 @@
                 top: 1rem;
                 left: 1.5rem;
                 transform: none;
-                height: 1.5rem; /* 24px */
+                height: 1.5rem;
+                filter: grayscale(1) brightness(2.5);
                 opacity: 0.7;
             }
+            
+            .project-partner-logo-orlib {
+            position: absolute;
+            top: 1rem;
+            left: 1.5rem;
+            width: auto;
+            height: 1rem;
+            filter: grayscale(1) brightness(2.5);
+            opacity: 0.7;
+        }
 
             .project-focal-icon {
                 position: absolute;
                 top: 1rem;
                 right: 1.5rem;
-                left: auto;      /* Unset left positioning */
-                transform: none; /* Reset transform */
-                width: 2.5rem;   /* 40px - A better size for this layout */
+                left: auto; 
+                transform: none;
+                width: 2.5rem;
                 height: 2.5rem;
             }
 
