Change background class on mobile industry cards to glass-effect

--- a/templates/home.html
+++ b/templates/home.html
@@ -1214,7 +1214,7 @@
                                     </div>
                                 </template>
                             </div>
-                            <div class="p-4 bg-black/20">
+                            <div class="p-4 glass-effect">
                                 <p class="text-gray-300 text-sm mb-4" x-text="industry.description"></p>
                                 <div class="border-t border-white/10 pt-4">
                                     <h4 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">Key Focus</h4>
