--- a/templates/home.html
+++ b/templates/home.html
@@ -1232,7 +1232,7 @@
                                         </template>
                                     </ul>
                                 </div>
-                                <div class="mt-auto pt-4 border-t border-white/10">
+                                <div class="mt-5  pt-4 border-t border-white/10">
                                     <button @click="openInquiryModal(key)" class="btn-futuristic text-white font-semibold px-5 py-2 text-sm">
                                         Inquire About This Sector
                                     </button>
