change featured proje ts headings to uppercase

--- a/templates/home.html
+++ b/templates/home.html
@@ -1059,7 +1059,7 @@
                     </div>
                     <div class="p-6 sm:p-8 flex-grow flex flex-col">
                         <span class="text-sm font-semibold text-teal-400 uppercase">Fuel Efficiency / Oil & Gas</span>
-                        <h3 class="mt-2 text-2xl font-bold text-white">NanoEfx: <span class="font-body">Revolutionizing Fuel Efficiency in Africa</span></h3>
+                        <h3 class="mt-2 text-2xl font-bold text-white uppercase">NanoEfx: Revolutionizing Fuel Efficiency in Africa
                         <p class="mt-4 text-gray-400 text-sm flex-grow text-justify hyphens-auto">
                            As the exclusive Go-To-Market partner for NanoEfx in Africa, we are deploying patented catalytic fuel treatment to high-impact sectors. Our initial focus on Nigeria's Oil & Gas, telecoms, and government fleets addresses critical economic and environmental challenges by reducing fuel consumption, lowering emissions, and extending engine life.
                         </p>
@@ -1092,7 +1092,7 @@
                     </div>
                     <div class="p-6 sm:p-8 flex-grow flex flex-col">
                         <span class="text-[13px] font-semibold text-teal-400 uppercase">Energy Solutions / Manufacturing</span>
-                        <h3 class="mt-2 text-2xl font-bold text-white">ORLIB: <span class="font-body">Powering Africa's Energy Future</span></h3>
+                        <h3 class="mt-2 text-2xl font-bold uppercase text-white">ORLIB: Powering Africa's Energy Future</h3>
                         <p class="mt-4 text-gray-400 text-sm flex-grow text-justify hyphens-auto">
                             As the exclusive partner for Japan's ORLIB across Africa, we are empowering local manufacturing to meet a continental energy storage market projected to exceed <span class="font-bold text-teal-400">$15 billion</span>. We forge strategic alliances to integrate ORLIB's patented battery technologies, enhancing local product efficiency and competitiveness on a global scale.
                         </p>
