--- a/templates/home.html
+++ b/templates/home.html
@@ -1651,7 +1651,7 @@
                     </div>
                     <div><label for="message" class="block text-sm font-medium text-gray-300">Message</label><textarea
                             name="message" id="message" rows="4" required placeholder="Please provide details about your inquiry..."
-                            class="form-input-futuristic mt-1 block w-full rounded-md shadow-sm py-2 px-3 text-white"></textarea>
+                            class="form-input-futuristic mt-1 block w-full rounded-md shadow-sm py-2 px-3 text-sm text-white"></textarea>
                     </div>
                 </div>
                 <div class="mt-6">
